Create personal website

--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,9 @@ p{
     color: purple;
     font-family: "Great Vibes";
 }
+img{
+   height: 200px; width: 200px; 
+}
+body{
+    text-align: center;
+}
