--- a/styles.css
+++ b/styles.css
@@ -6,5 +6,8 @@ img{
    height: 200px; width: 200px; 
 }
 body{
+    text-align: center; background-color: #4842f4
+}
+ol{
     text-align: center;
 }
